# LineFormer

./: pyproject.toml  setup.cfg
lineformer/: eval.py  infer.py  setup.py
