[metadata]
name = lineformer
version = 1.0
author = peopleoftheworld
author_email = mail@timonschneider.de
description = LineFormer as python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tdsone/LineFormer

[options]
packages = find:

[options.packages.find]
include = lineformer